--- a/src/December22/12-24-22.md
+++ b/src/December22/12-24-22.md
@@ -1,3 +1,3 @@
-- List of tools - [https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b](https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b)
-- Eth metrics to track - [https://dune.com/blockworks_research/eth](https://dune.com/blockworks_research/eth)
+- SOV compendium list of tools - [https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b](https://sovs.notion.site/sovs/Sov-s-Compendium-41f097d28dae4d09801f10cde1b2d03b)
+- Blockworks research Dune Eth metrics - [https://dune.com/blockworks_research/eth](https://dune.com/blockworks_research/eth)
 
