--- a/src/December22/12-27-22.md
+++ b/src/December22/12-27-22.md
@@ -1,5 +1,5 @@
 ### Transaction explorers
-- ethtx explorer - https://ethtx.info/](https://ethtx.info/
+- ethtx explorer - https://ethtx.info/
 - samczsun tx explorer - https://tx.eth.samczsun.com/
 - tenderly tx explorer - https://dashboard.tenderly.co/explorer?utm_source=homepage
 - eigenphi tx explorer - https://tx.eigenphi.io/analyseTransaction
