--- a/src/December22/12-27-22.md
+++ b/src/December22/12-27-22.md
@@ -5,4 +5,50 @@
 - eigenphi tx explorer - [https://tx.eigenphi.io/analyseTransaction](https://tx.eigenphi.io/analyseTransaction)
 - palkeo tx explorer - [https://oko.palkeo.com/](https://oko.palkeo.com/)
 - tokenflow tx explorer - [https://tokenflow.live/](https://tokenflow.live/)
-- 
+
+### Pretend to be another wallet
+- impersonator - [https://www.impersonator.xyz/](https://www.impersonator.xyz/)
+
+### KZG
+- kzg ceremony github - [https://github.com/ethereum/kzg-ceremony](https://github.com/ethereum/kzg-ceremony)
+
+### browser extensions to analyze transactions
+- theInterceptor - [https://github.com/DarkFlorist/TheInterceptor](https://github.com/DarkFlorist/TheInterceptor)
+- fire wallet extension - [https://www.joinfire.xyz/?utm_source=twitter&utm_medium=profile](https://www.joinfire.xyz/?utm_source=twitter&utm_medium=profile)
+- revoke.cash - [https://revoke.cash/](https://revoke.cash/)
+- wallet guard - [https://walletguard.app/](https://walletguard.app/)
+- pocket universe - [https://www.pocketuniverse.app/](https://www.pocketuniverse.app/)
+
+### defi and dashboards
+- chicken bonds profitability - [https://curve.substack.com/p/december-6-2022-chicken-bond-profitability](https://curve.substack.com/p/december-6-2022-chicken-bond-profitability)
+- balancer governance shenanigans - [https://messari.io/report/governor-note-the-vebal-wars](https://messari.io/report/governor-note-the-vebal-wars)
+- Humpy remaining veBAL balance - [https://www.defiwars.xyz/wars/balancer](https://www.defiwars.xyz/wars/balancer)
+- lp history dashboard - [https://revert.finance/#/initiator](https://revert.finance/#/initiator)
+- onchain analytics - [https://analyzooor.super.site/](https://analyzooor.super.site/)
+- euler research guide - [https://www.euler.finance/blog/researching-euler](https://www.euler.finance/blog/researching-euler)
+
+### layer
+- eigenlayer explanation - [https://inevitableeth.com/en/home/ethereum/upgrades/middleware/eigenlayer](https://inevitableeth.com/en/home/ethereum/upgrades/middleware/eigenlayer)
+- goerli dev activity dune dashboard - [https://dune.com/niftytable/goerli-developer-activity](https://dune.com/niftytable/goerli-developer-activity)
+- l2 gas consumption dune dashboard - [https://dune.com/funnyking/L2-Gas-Consumption](https://dune.com/funnyking/L2-Gas-Consumption)
+- l2 arbitrum and optimism comparison dune dashboard - [https://dune.com/blockworks_research/l2-comparison-dashboard](https://dune.com/blockworks_research/l2-comparison-dashboard)
+- cosmos explorer - [https://mapofzones.com/home?columnKey=ibcVolume&period=24h](https://mapofzones.com/home?columnKey=ibcVolume&period=24h)
+- 5 years mev research james prestwich - [https://medium.com/@Prestwich/mev-c417d9a5eb3d](https://medium.com/@Prestwich/mev-c417d9a5eb3d)
+
+### misc
+- private key database with balance checker - [https://keys.lol/](https://keys.lol/)
+
+
+### solidity
+- solidity sol2uml diff contracts - [https://github.com/naddison36/sol2uml/releases/tag/v2.4.0](https://github.com/naddison36/sol2uml/releases/tag/v2.4.0)
+
+### security
+- secret network sgx hack - [https://sgx.fail/](https://sgx.fail/)
+- arbitrum delay attack solve - [https://offchain.medium.com/solutions-to-delay-attacks-on-rollups-434f9d05a07a](https://offchain.medium.com/solutions-to-delay-attacks-on-rollups-434f9d05a07a)
+
+### grants
+- uniswap foundation grants - [https://uniswapfoundation.mirror.xyz/h3bNWvussGBX5wm2oAuvS9RP8BTPgD6d80A_eL5lltU](https://uniswapfoundation.mirror.xyz/h3bNWvussGBX5wm2oAuvS9RP8BTPgD6d80A_eL5lltU)
+
+
+
+
