--- a/src/December22/12-30-22.md
+++ b/src/December22/12-30-22.md
@@ -12,29 +12,29 @@
   - [https://blog.ethereum.org/2022/12/29/supported-teams-roundup-22](https://blog.ethereum.org/2022/12/29/supported-teams-roundup-22)
 - tradingview new indicator from cubantobacco and spacemanbtc 
   - [https://twitter.com/cubansedge/status/1608436255389552641?t=Psmdz8BCl1hQhHT9KfmLQA&s=19](https://twitter.com/cubansedge/status/1608436255389552641?t=Psmdz8BCl1hQhHT9KfmLQA&s=19)
-- text 
+- scream.sh possible rug pull instead of hack 
   - [https://twitter.com/cryptohamm/status/1608200367073857536?t=EczWq5mSKdE5FwMm6bJfVw&s=19](https://twitter.com/cryptohamm/status/1608200367073857536?t=EczWq5mSKdE5FwMm6bJfVw&s=19)
-- text 
+- scroll zkp 
   - [https://twitter.com/Newmancapitalvc/status/1608016874075455490?t=U-4AC0EYCmmgBvw0oyHKfw&s=19](https://twitter.com/Newmancapitalvc/status/1608016874075455490?t=U-4AC0EYCmmgBvw0oyHKfw&s=19)
-- text 
+- sui dev team possible clawback from ftx funded $200 million 
   - [https://twitter.com/WuBlockchain/status/1608295790312554497?t=Mb9RgwfJpUZy4biPkIhh-w&s=19](https://twitter.com/WuBlockchain/status/1608295790312554497?t=Mb9RgwfJpUZy4biPkIhh-w&s=19)
-- text 
+- solidity shell github 
   - [https://github.com/tintinweb/solidity-shell](https://github.com/tintinweb/solidity-shell)
-- text 
+- dan romero farcaster how it works youtube link
   - [https://twitter.com/dwr/status/1608210062182342662?t=3ePcjIajkgMS2WG_xNTVxg&s=19](https://twitter.com/dwr/status/1608210062182342662?t=3ePcjIajkgMS2WG_xNTVxg&s=19)
-- text 
+- eigenlayer 2022 community contributions 
   - [https://twitter.com/eigenlayer/status/1608197773995962368?t=OnPZAoAY_z4hLrAJLKeM-w&s=19](https://twitter.com/eigenlayer/status/1608197773995962368?t=OnPZAoAY_z4hLrAJLKeM-w&s=19)
-- text 
+- evm disassembler in regex 
   - [https://twitter.com/0x796/status/1608039943582142464?s=20](https://twitter.com/0x796/status/1608039943582142464?s=20)
-- text 
+- babylonians paid substack 
   - [https://thebabylonians.substack.com](https://thebabylonians.substack.com)
-- text 
+- gmx referrals dashboard 
   - [https://www.gmxreferrals.com/](https://www.gmxreferrals.com/)
-- text 
+- on chain intrigue telegram channel for 3ac, ftx, etc 
   - [https://t.me/OnChainIntrigue](https://t.me/OnChainIntrigue)
-- text 
+- moment of zen podcast with dan romero 
   - [https://twitter.com/dwr/status/1607832338506858496?t=L3eeQcQYmjgQjnf_fcQhCg&s=19](https://twitter.com/dwr/status/1607832338506858496?t=L3eeQcQYmjgQjnf_fcQhCg&s=19)
-- text 
+- crocswap founder podcast 
   - [https://twitter.com/0xdoug/status/1470742519394807808?t=25QC5OuiY7TEoe000axo-w&s=19](https://twitter.com/0xdoug/status/1470742519394807808?t=25QC5OuiY7TEoe000axo-w&s=19)
-- text 
+- erigon cl database schema 
   - [https://twitter.com/GiulioRebuffo/status/1607769715778240516?t=g66eGA_weDTd3J-h1bUiPQ&s=19](https://twitter.com/GiulioRebuffo/status/1607769715778240516?t=g66eGA_weDTd3J-h1bUiPQ&s=19)
