--- a/src/December22/12-30-22.md
+++ b/src/December22/12-30-22.md
@@ -1,4 +1,4 @@
-### test
+### links
 
 - degensensei this week on chain substack 
   - [https://degensensei.substack.com/p/this-week-on-chain-1](https://degensensei.substack.com/p/this-week-on-chain-1)
