--- a/src/December22/12-31-22.md
+++ b/src/December22/12-31-22.md
@@ -29,6 +29,11 @@
   - [https://github.com/samczsun/abi-guesser](https://github.com/samczsun/abi-guesser)
 - Vitalik excited about ETH ecosystem
   - [https://vitalik.eth.limo/general/2022/12/05/excited.html](https://vitalik.eth.limo/general/2022/12/05/excited.html)
+- interface.fyi get interface with abi
+  - [https://www.interface.fyi/](https://www.interface.fyi/)
+- ethereum dashboards
+  - [https://www.ethdash.xyz/](https://www.ethdash.xyz/)
+
 
 ### Workflow
 - etherscan
@@ -44,4 +49,4 @@
 - binance wallets on eth
   - lookonchain - [https://twitter.com/lookonchain/status/1602638819588681728](https://twitter.com/lookonchain/status/1602638819588681728)
   - larry theblock - [https://twitter.com/lawmaster/status/1602581425441611776?s=20](https://twitter.com/lawmaster/status/1602581425441611776?s=20)
-- 
+  
