--- a/src/January23/1-1-23.md
+++ b/src/January23/1-1-23.md
@@ -2,3 +2,5 @@
 
 - general eth related docs
   - [https://pintail.xyz/](https://pintail.xyz/)
+- slurpxbt python defillama wrapper
+  - [https://github.com/slurpxbt/defillama_library](https://github.com/slurpxbt/defillama_library)
